# community-pulse

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: CI.yml
demo/shots/: README.md
docs/: architecture.md  article-brief-prompt.md  case-study.md  demo-script.md  production.md  research-prompt.md
docs/design/: IMPLEMENTATION.md  expand-card-plan.md  mcp-integration-plan.md  mockup-desktop.html  mockup-mobile.html  research-interface-plan.md
fixtures/: community-pulse.json
research/: .gitignore
scripts/: capture-demo-shots.sh  record-demo.sh
src/: app.rs  chat.rs  command_plane.rs  domain.rs  engine.rs  ingest.rs  lib.rs  live.rs  main.rs  mcp.rs  reactive.rs  research.rs  setup.rs  tools.rs
tests/: bridge.rs  cli.rs  engine.rs  live.rs  mcp.rs  research.rs
ui/: app.slint  icons.slint  mobile.slint  models.slint  root.slint  theme.slint
