[package]
name = "community-pulse"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "A reactive community trend digest built with Rust, Slint, and lazily"
license = "MIT"
repository = "https://github.com/btakita/community-pulse"

[lib]
name = "community_pulse"

[[bin]]
name = "pulse"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
feed-rs = "2.4"
lazily = { version = "0.47", features = ["thread-safe"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.17.1"
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "sync"] }

[build-dependencies]
slint-build = "1.17.1"

[dev-dependencies]
tempfile = "3.20"

[profile.release]
lto = "thin"
strip = true
