[package]
name = "community-pulse"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "A reactive community trend digest built with Rust, Slint, and lazily"
license = "MIT"
repository = "https://github.com/btakita/community-pulse"

[lib]
name = "community_pulse"

[[bin]]
name = "pulse"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
arboard = { version = "3.6", default-features = false }
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
feed-rs = "2.4"
lazily = { version = "0.48.1", features = ["thread-safe", "ipc"] }
libc = "0.2"
open = "5.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.17.1", default-features = false, features = [
    "accessibility",
    "backend-winit",
    "compat-1-2",
    "renderer-software",
    "std",
] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "net", "rt-multi-thread", "sync"] }
toml_edit = "0.23"

[build-dependencies]
slint-build = "1.17.1"

[dev-dependencies]
tempfile = "3.20"

[profile.release]
lto = "thin"
strip = true
